<resources>
    <string name="app_name">manasia</string>
    <string name="manasia_address">Stelea Spataru 13, Bucuresti</string>
    <string name="category_image">Category image</string>
    <string name="notify_status">bookmark_icon</string>
    <string name="back_button">Back button</string>
    <string name="call">CALL</string>
    <string name="notify">Notify</string>
    <string name="notifying">Notifying</string>
    <string name="map">MAP</string>
    <string name="event_thumbnail">Event thumbnail</string>
    <string name="manasia_logo">Manasia logo</string>
    <string name="filters">Filters</string>
    <string name="music">MUSIC</string>
    <string name="shops">SHOPS</string>
    <string name="hub">HUB</string>
    <string name="level_of_crowdedness">Level of crowdedness:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manasia_events_settings">Manasia Events Settings</string>
    <string name="next_manasia_event">NEXT MANASIA EVENT</string>
    <string name="next_event_thumbnail">Next event thumbnail</string>
    <string name="manasia_menu">manasia menu</string>
    <string name="loading">Loading…</string>
    <string name="menu">MENU</string>
    <string name="wifi_key">WiFi key: steleaspataru13</string>
    <string name="no_events_found">No events found. \nThat\'s not right.</string>
    <string name="closed_noon">Manasia is CLOSED until noon.</string>
    <string name="open_midnight">OPEN until midnight.</string>
    <string name="open_2am">OPEN until 2am.</string>
    <string name="clickable_hint">clickable hint</string>
    <string name="manasia_event_detail">manasia event detail</string>
    <string name="open_android_notification_settings">Open Android Notification settings</string>
    <string name="drinks_menu">Drinks Menu</string>
    <string name="food_menu">Food Menu</string>
    <string name="settings">Settings</string>
</resources>
